k8s/wordpress-ing.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: wordpress
spec:
  rules:
  - host: wordpress.keepcoding.gcp.moncadaisla.es
    http:
      paths:
      - backend:
          serviceName: wordpress
          servicePort: 80
  - host: wordpress.35-195-110-201.nip.io
    http:
      paths:
      - backend:
          serviceName: wordpress
          servicePort: 80
